--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.2",
         "axios": "^0.21",
+        "bootstrap": "^4.6.0",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^4.0.0",
+        "sass": "^1.48.0",
+        "sass-loader": "^12.1.0"
+    },
+    "dependencies": {
+        "jquery": "^3.6.0",
+        "jquery.easing": "^1.4.1",
+        "popper.js": "^1.16.1"
     }
 }
