--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^12.1.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
         "jquery": "^3.6.0",
         "jquery.easing": "^1.4.1",
         "popper.js": "^1.16.1"
