--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ docker-compose.override.yml
 Homestead.json
 Homestead.yaml
 npm-debug.log
+composer.lock
 yarn-error.log
 /.idea
 /.vscode
+composer.lock
